# ProjectTox-Qt-GUI

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.md  README.md  copyright.txt
resources/: qml.qrc  (+3 more)
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  addfrienddialog.cpp  addfrienddialog.hpp  appinfo.hpp  chatpagewidget.cpp  chatpagewidget.hpp  clickablelabel.cpp  clickablelabel.hpp  closeapplicationdialog.cpp  closeapplicationdialog.hpp  copyableelidelabel.cpp  copyableelidelabel.hpp  core.cpp  core.hpp  coreqml.cpp  coreqml.hpp  cstring.cpp  cstring.hpp  cuserid.cpp  cuserid.hpp  customhinttextedit.cpp  customhinttextedit.hpp  customhinttreeview.cpp  customhinttreeview.hpp  customhintwidget.cpp  customhintwidget.hpp  dhtdialog.cpp  dhtdialog.hpp  dhteditdialog.cpp  dhteditdialog.hpp  dhtworker.cpp  dhtworker.hpp  editablelabelwidget.cpp  editablelabelwidget.hpp  elidelabel.cpp  elidelabel.hpp  elidelabeleditable.cpp  (+61 more)
src/Settings/: abstractsettingspage.cpp  abstractsettingspage.hpp  basicsettingsdialog.cpp  basicsettingsdialog.hpp  customhintlistwidget.cpp  customhintlistwidget.hpp  dhtbootstrapsettingspage.cpp  dhtbootstrapsettingspage.hpp  dhtserverdialog.cpp  dhtserverdialog.hpp  emoijfontsettings.cpp  emoijfontsettings.h  emojifontcombobox.cpp  emojifontcombobox.hpp  emojifontsettingsdialog.cpp  emojifontsettingsdialog.hpp  guisettingspage.cpp  guisettingspage.h  guisettingspage.hpp  informationiconlabel.cpp  informationiconlabel.hpp  loggingsettingspage.cpp  loggingsettingspage.hpp  logstoragesettingspage.cpp  logstoragesettingspage.hpp  messagestyleinterface.cpp  messagestyleinterface.h  networksettingspage.cpp  networksettingspage.hpp  privacysettingspage.cpp  privacysettingspage.hpp  settings.cpp  settings.hpp  settingsdialog.cpp  settingsdialog.hpp  smileypackparser.cpp  smileypackparser.h  soundsettingspage.cpp  soundsettingspage.hpp
src/core/: DHT.c  DHT.h  network.h
(+46 files in other folders)
